--- a/css/new.css
+++ b/css/new.css
@@ -1497,3 +1497,13 @@
         max-width: 100%;
     }
 }
+
+.product-card__image-link {
+    max-height: 300px;
+    height: 100%;
+}
+
+.product-card__image-link img {
+    height: 100%;
+    object-fit: cover;
+}
