--- a/css/new.css
+++ b/css/new.css
@@ -1511,6 +1511,7 @@
 .woocommerce #products-container div.product,
 .products-section .product-card {
     display: flex;
+    width: 100%;
     height: 100%;
     flex-direction: column;
     align-items: flex-start;
