--- a/css/new.css
+++ b/css/new.css
@@ -1554,6 +1554,7 @@
     transition: all 0.2s ease;
     margin: 0;
     border-radius: 0;
+    line-height: inherit !important;
 }
 
 /* Убираем border-radius у первого и последнего элемента если не нужен */
@@ -1567,15 +1568,14 @@
     border-bottom-right-radius: 0;
 }
 
-/* Убираем двойные границы между элементами */
 .woocommerce-pagination .page-item+.page-item .page-link {
-    border-left: none;
+    border: none;
 }
 
 /* Hover эффект */
 .woocommerce-pagination .page-link:hover {
     background-color: #e9ecef !important;
-    color: var(--corporate-color-1)  !important;
+    color: var(--corporate-color-1) !important;
     border-color: #e9ecef !important;
     z-index: 2;
 }
@@ -1604,6 +1604,7 @@
     font-size: 16px;
     font-weight: 600;
     display: flex;
+    padding: 0 !important;
 }
 
 /* Адаптивность */
@@ -1613,4 +1614,9 @@
         height: 36px;
         font-size: 13px;
     }
+}
+
+.woocommerce nav.woocommerce-pagination ul li a,
+.woocommerce nav.woocommerce-pagination ul li span {
+    padding-inline: 12px !important;
 }
